# utf8-zero

./: Cargo.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bufread_decoder.rs  fuzz_decode.rs  fuzz_lossy_decoder.rs
src/: lib.rs  lossy.rs  read.rs
tests/: unit.rs
