[package]
name = "utf8-zero"
version = "0.7.6"
edition = "2021"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
description = "Zero-copy, incremental UTF-8 decoding with error handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SimonSapin/rust-utf8"
keywords = ["utf-8", "decode", "incremental", "streaming", "no_std"]
categories = ["encoding", "no-std", "parsing"]

[features]
default = ["std"]
std = []
