[package]
name = "utf8-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.utf8-zero]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
doc = false

[[bin]]
name = "fuzz_lossy_decoder"
path = "fuzz_targets/fuzz_lossy_decoder.rs"
doc = false

[[bin]]
name = "fuzz_bufread_decoder"
path = "fuzz_targets/fuzz_bufread_decoder.rs"
doc = false
